# MySampler

./: .gitignore  .gitmodules  CMakeLists.txt  Piano960.jucer  README.md  bs  build.sh  config.h.in  config.jucer  presets.json
.github/workflows/: build-and-test-gcc.yml  build-and-test-gnu.yml  build-and-test-with-clang.yml  build-and-test-with-gcc.yml  build-and-test.yml  tests.yml  validate-presets.yml
Config/: Piano960.jucer  paths.h.in
Libraries/AudioFFT/: AudioFFT.cpp
Model/: build_model.sh
Models/: convert_h5_to_tflite.py  create_crepe_test_data-requirements.txt  create_crepe_test_data.py
Models/crepe-models/: model-tiny.tflite
Scripts/: build.sh  clean_packs.py  clear_pitch_detection_cache.sh  clear_terminal.sh  compile_samples.py  compile_test_data.py  delete_duplicate_samples.py  install_ubuntu_requirements.sh  install_ubuntu_requirements.txt  mp3_to_wav.py  normalize_samples.py  print_presets.sh  print_sound_sources.py  profiler.sh  requirements.txt  reset-presets.sh  setup_scripting_enviroment.sh  trim_samples.py  uninstall.sh  validate_presets.py
Source/: CMakeLists.txt  app.cpp  app.h  audio_processor.cpp  audio_processor.h  config.cpp  config.h  lock_buttons.cpp  lock_buttons.h  lockable_keys.cpp  lockable_keys.h  logs.cpp  logs.h  main_view.cpp  main_view.h  midi.cpp  midi.h  new_preset_dialog.cpp  normalize_audio.cpp  normalize_audio.h  notes.cpp  notes.h  paths.h.in  piano.cpp  piano.h  pitch_detection.cpp  pitch_detection.h  pitch_detection_v2.cpp  pitch_detection_v2.h  plugin_editor.cpp  plugin_editor.h  plugin_processor.cpp  plugin_processor.h  presets.cpp  presets.h  random.cpp  random.h  sample.h  sample_categories.cpp  sample_categories.h  (+8 more)
Source/gui/: app.cpp  app.h  icon_button.cpp  icon_button.h  lockable_keys.cpp  lockable_keys.h  main_view.cpp  main_view.h  new_preset_dialog.cpp  new_preset_dialog.h  presets_dropdown_menu.cpp  presets_dropdown_menu.h  sample_category_grid.cpp  sample_category_grid.h  sound_source_grid.cpp  sound_source_grid.h
Source/pitch/: crepe.cpp  crepe.h  exceptions.h  notes.cpp  notes.h  pitch.cpp  pitch.h  semitones.cpp  semitones.h  spice.cpp  spice.h  yin.cpp  yin.h
Source/pitch_detection/: crepe.cpp  crepe.h  exceptions.h  frequency.cpp  frequency.h  notes.cpp  notes.h  pitch.cpp  pitch.h  pitch_detection.cpp  pitch_detection.h  semitones.cpp  semitones.h  spice.cpp  spice.h  yin.cpp  yin.h
Tests/: CMakeLists.txt  app_tests.cpp  crepe_tests.cpp  lockable_keys_tests.cpp  main_test.cpp  main_view_tests.cpp  note_detection_tests.cpp  pitch_detection_tests.cpp  pitch_tests.cpp  preset_tests.cpp  presets_test.cpp  processor_test.cpp  processor_tests.cpp  sample_category_tests.cpp  sample_set_tests.cpp  sampler_tests.cpp  samples_test.cpp  samples_tests.cpp  sound_source_test.cpp  ui_tests.cpp
model/: model.pb
model/variables/: variables.index
